[package]
name = "anyhow_trace"
version = "0.1.0"
edition = "2021"
description = "Macro which adds source location as context to anyhow errors"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.53", features = ["full", "visit-mut"] }

[dev-dependencies]
anyhow = "1.0.81"
